@@ -1,3 +1,8 @@
+Fri Oct  8 14:01:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Deployment/Handlers/Connection_Handler.cpp:
+          Some small fixes for disconnect
+
 Fri Oct  8 13:53:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/Containers/Session/Session_Container.cpp:
